--- a/calculator.html
+++ b/calculator.html
@@ -5,12 +5,17 @@ function cube() {
  var num = document.getElementById("n1");
  num.value = Math.pow(num.value, 3);
 }
+function sin() {
+ var nume = document.getElementById("n1");
+ nume.value = Math.sin(Math.toRadians(nume));
+}
 </script>
 </head>
 <body>
  Number:
  <input type="text" id="n1">
   <button onclick="cube()"> x^3 </button>
+  <button onclick="sin()"> sin(x) </button>
 </body>
 <h1>Calculadora de Iván Martínez Ariza</h1>
 </html>
